--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,9 @@
 root = true
 
 [*]
-charset = utf-8
-indent_style = space
-indent_size = 2
-end_of_line = lf
-insert_final_newline = true
-trim_trailing_whitespace = true
+charset = utf-8 //字符编码格式
+indent_style = space // 缩紧风格，space表示基于空格做缩进
+indent_size = 2 //缩进大小，2表示缩进2个单位
+end_of_line = lf // 换行风格。lf表示linux和mac换行风格
+insert_final_newline = true //当创建文件时是否自动在文件末尾添加一个新行，true表示自动添加
+trim_trailing_whitespace = true //是否自动移除尾行多余空格，true表示自动添加
