--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "dependencies": {
     "axios": "^0.18.0",
     "echarts": "^4.2.1",
+    "el-tree-transfer": "^2.2.9",
     "element-ui": "^2.4.11",
     "iview": "^3.3.3",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^2.5.4",
     "vue-router": "^3.0.1",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
